--- a/src/project/workLog/components/LogContent.scss
+++ b/src/project/workLog/components/LogContent.scss
@@ -1,6 +1,6 @@
 .workItem-log {
     padding: 20px;
-    height: calc(100vh - 49px);
+    height: 100%;
     background: #fff;
     .worklog-content {
         text-overflow: ellipsis;
