--- a/src/projectSet/overview/components/ProjectSetSurvey.scss
+++ b/src/projectSet/overview/components/ProjectSetSurvey.scss
@@ -1,5 +1,5 @@
 .projectSet-survey {
-    height: calc(100vh - var(--thoughtware-head-height));
+    height: 100%;
     padding: var(--thoughtware-padding);
     overflow: auto;
 
