--- a/src/sprint/setting/components/SprintBasicInfo.scss
+++ b/src/sprint/setting/components/SprintBasicInfo.scss
@@ -1,5 +1,9 @@
 
 
+.sprint-basicinfo {
+    height: 100%;
+    overflow: auto;
+}
 .sprint-info-title {
     display: flex;
     align-items: center;
