--- a/src/statistics/components/Statistics.scss
+++ b/src/statistics/components/Statistics.scss
@@ -1,6 +1,6 @@
 .statistics {
     background-color: #fff;
-    height: calc(100vh - 48px);
+    height: 100%;
 
     .statistics-content {
         height: 100%;
