--- a/src/work/components/WorkDetailCrumb.scss
+++ b/src/work/components/WorkDetailCrumb.scss
@@ -17,6 +17,9 @@
                 // text-decoration: underline;
                 cursor: pointer;
             }
+            .work-detail-crumb-text {
+                font-weight: 600;
+            }
         }
         .work-detail-crumb-item:hover {
             cursor: pointer;
