--- a/src/project/common/components/ProjectLayout.scss
+++ b/src/project/common/components/ProjectLayout.scss
@@ -2,7 +2,7 @@
     height: 100vh;
     overflow: hidden;
     .prodetail-row {
-        height: calc(100vh - var(--thoughtware-head-height));
+        height: 100%;
     }
 
     .project-detail-side {
@@ -83,26 +83,19 @@
 
                 .project-expend {
                     position: absolute;
-                    right: -10px;
-                    width: 20px;
-                    height: 20px;
-                    background: #fff;
+                    right: -5px;
+                    width: 10px;
+                    height: 50px;
                     border-radius: 20px;
-                    bottom: 120px;
+                    top: 50%;
                     line-height: 20px;
                     display: none;
                     z-index: 2;
-
-                    .right {
-                        width: 20px;
-                        height: 20px;
-                        font-size: 20px;
-                        font-weight: 600;
-
-                    }
-
-                    .right:hover {
-                        color: var(--thoughtware-blue);
+                    background: var(--thoughtware-gray-400);
+                    .project-expend-icon {
+                        width: 10px;
+                        height: 50px;
+        
                     }
                 }
             }
