--- a/src/project/common/components/SetMenu.scss
+++ b/src/project/common/components/SetMenu.scss
@@ -1,5 +1,6 @@
 .project-setting {
-    border-top: 1px solid #f0f2f5;
+    // border-top: 1px solid #f0f2f5;
+    cursor: pointer;
     .project-setting-icon {
         display: flex;
         flex-direction: column;
@@ -12,16 +13,14 @@
         align-items: center;
         margin-left: 20px;
         height: 40px;
+        .ant-avatar {
+            height: 20px;
+            width: 20px;
+            font-size: 10px;
+        }
     }
 
-   
-
-   
 }
 .project-setting:hover {
     background-color: var(--thoughtware-gray-400);
-}
-
-.project-setting {
-    cursor: pointer;
 }
