--- a/src/project/sprint/components/SprintList.scss
+++ b/src/project/sprint/components/SprintList.scss
@@ -1,10 +1,11 @@
 .project-sprint {
     .ant-row {
         overflow: auto;
+        height: 100%;
     }
     .project-sprint-list {
         background-color: #fff;
-        height: calc(100vh - 60px);
+        height: 100%;
         padding: var(--thoughtware-padding);;
         flex: 1;
       
