--- a/src/projectSet/common/components/ProjectSetDetailAside.scss
+++ b/src/projectSet/common/components/ProjectSetDetailAside.scss
@@ -103,26 +103,22 @@
                 .hidden-menu {
                     display: none;
                 }
-                .projectSet-expend{
+                
+                .projectSet-expend {
                     position: absolute;
-                    right: -10px;
-                    width: 20px;
-                    height: 20px;
-                    background: #fff;
+                    right: -5px;
+                    width: 10px;
+                    height: 50px;
                     border-radius: 20px;
-                    bottom: 120px;
+                    top: 50%;
                     line-height: 20px;
                     display: none;
                     z-index: 2;
-                    .right {
-                        width: 20px;
-                        height: 20px;
-                        font-size: 20px;
-                        font-weight: var(--thoughtware-font-weight-bold);
-                        
-                    }
-                    .right:hover {
-                        color: var(--thoughtware-blue);
+                    background: var(--thoughtware-gray-400);
+                    .projectSet-expend-icon {
+                        width: 10px;
+                        height: 50px;
+        
                     }
                 }
             }
