--- a/src/version/common/components/VersionDetailAside.scss
+++ b/src/version/common/components/VersionDetailAside.scss
@@ -103,26 +103,18 @@
 
             .version-expend {
                 position: absolute;
-                right: -10px;
-                width: 20px;
-                height: 20px;
-                background: #fff;
+                right: -5px;
+                width: 10px;
+                height: 50px;
                 border-radius: 20px;
-                bottom: 120px;
+                top: 70%;
                 line-height: 20px;
                 display: none;
                 z-index: 2;
-
-                .right {
-                    width: 20px;
-                    height: 20px;
-                    font-size: 20px;
-                    font-weight: 600;
-
-                }
-
-                .right:hover {
-                    color: var(--thoughtware-blue);
+                background: var(--thoughtware-gray-400);
+                .version-expend-icon {
+                    width: 10px;
+                    height: 50px;
                 }
             }
         }
