--- a/src/version/setting/components/VersionBasicInfo.scss
+++ b/src/version/setting/components/VersionBasicInfo.scss
@@ -1,3 +1,7 @@
+.version-basicinfo {
+    height: 100%;
+    overflow: auto;
+}
 .version-info-title {
     display: flex;
     align-items: center;
