--- a/src/work/components/WorkDetail.scss
+++ b/src/work/components/WorkDetail.scss
@@ -181,7 +181,7 @@
                 text-overflow: ellipsis;
                 white-space: nowrap;
                 font-size: 14px;
-                
+                font-weight: 600;
                 margin-right: 20px;
                 display: flex;
                 justify-content: space-between;
