--- a/src/work/components/WorkList.scss
+++ b/src/work/components/WorkList.scss
@@ -1,6 +1,6 @@
 .work-list {
     display: flex;
-    height: calc(100vh - 49px);
+    height: 100%;
     background: #fff;
     border-top: 1px solid #f7f7f7;
     // .ant-row {
