--- a/src/common/styles/_color.scss
+++ b/src/common/styles/_color.scss
@@ -82,8 +82,12 @@ $form-input-color: #e3e8f07d;
     width: 40px;
     height: 40px;
 }
+.icon-24 {
+    width: 24px;
+    height: 24px;
+}
 
-.icon-32 {
+.img-32 {
     width: 32px;
     height: 32px;
 }
@@ -110,6 +114,10 @@ $form-input-color: #e3e8f07d;
     width: 12px;
     height: 12px;
 }
+.icon-18 {
+    width: 18px;
+    height: 18px;
+}
 .icon-32 {
     width: 32px;
     height: 32px;
@@ -133,6 +141,12 @@ $form-input-color: #e3e8f07d;
     width: 20px;
     height: 20px;
 }
+
+.icon-15 {
+    width: 15px;
+    height: 15px;
+}
+
 .cancel-svg {
     width: 15px;
     height: 15px;
