--- a/src/projectSet/common/components/ProjectSetChangeModal.scss
+++ b/src/projectSet/common/components/ProjectSetChangeModal.scss
@@ -7,6 +7,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        color: #2b2b2b;
     }
     .projectSet-color-1 {
         background-color: #cadbf3;
@@ -24,8 +25,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 10px 20px;
-        color: #000;
+        padding: 15px;
         font-weight: 600;
         cursor: pointer;
         gap: 10px;
@@ -54,7 +54,7 @@
     }
 
     .projectSet-change-icon {
-        padding: 10px 0 10px 20px;
+        padding: 15px 0 15px 15px;
         display: flex;
         align-items: center;
         gap: 5px;
@@ -81,6 +81,7 @@
         width: 300px;
         border-radius: 5px;
         background: #fff;
+        color: #000;
         box-shadow: 0 3px 6px -4px #0000001f, 0 6px 16px #00000014, 0 9px 28px 8px #0000000d;
         .change-projectSet-head {
             height: 40px;
