--- a/src/home/common/components/MessageList.scss
+++ b/src/home/common/components/MessageList.scss
@@ -1,8 +1,16 @@
 .message-box {
     width: 100%;
+
+    .message-drawer-box {
+        position: absolute;
+        top: 0;
+        left: 75px;
+    }
 }
-.message-icon{
+
+.message-icon {
     text-align: center;
+
     .ant-avatar-sm {
         background: transparent;
         font-size: 20px;
@@ -10,11 +18,13 @@
         align-items: center;
         width: fit-content;
     }
+
     .ant-badge-multiple-words {
         padding: 0 3px;
         font-size: 9px;
     }
 }
+
 .message-text {
     width: 100%;
     height: 40px;
@@ -25,9 +35,11 @@
     padding: 0 20px;
     cursor: pointer;
     gap: 10px;
+
     .message-text-name {
         flex: 1;
     }
+
     .message-text-count {
         background: #ff4d4f;
         height: 14px;
@@ -44,20 +56,25 @@
         padding: 9px 20px;
         border-bottom: 0
     }
+
     .ant-drawer-close {
         padding: 12px 20px;
     }
+
     .ant-drawer-body {
         padding: 0;
         overflow: hidden;
+
         .ant-tabs-nav {
             padding: 0 20px;
         }
     }
+
     .message-box {
         height: calc(100vh - 95px);
         overflow: auto;
         padding: 0 20px;
+
         .message-list {
             display: flex;
             align-items: center;
@@ -65,65 +82,75 @@
             padding-bottom: 10px;
             cursor: pointer;
             gap: 10px;
+
             .message-status {
                 width: 6px;
                 height: 6px;
                 border-radius: 6px;
-                
+
             }
+
             .status-unread {
                 background: #ff0000;
             }
+
             .status-read {
                 background-color: #00ff00;
             }
         }
+
         .message-list:nth-child(4n+1) {
             .message-user-icon {
                 background-color: #cadbf3;
             }
         }
-        
-        .message-list:nth-child(4n+2){
+
+        .message-list:nth-child(4n+2) {
             .message-user-icon {
                 background-color: #deedd7;
             }
         }
-        
+
         .message-list:nth-child(4n+3) {
             .message-user-icon {
                 background-color: #ffebee;
             }
         }
-        
-        .message-list:nth-child(4n+4){
+
+        .message-list:nth-child(4n+4) {
             .message-user-icon {
                 background-color: #e8eaf6;
             }
         }
+
         .message-item-text {
             flex: 1;
             margin-left: 10px;
+
             .message-item-title {
                 height: 40px;
                 line-height: 40px;
                 font-weight: var(--thoughtware-font-weight-bold);
                 font-size: 16px;
-                .message-item-time{
+
+                .message-item-time {
                     padding: 0 10px;
                     font-size: 12px;
                     color: #999;
                 }
             }
+
             .message-item-desc {
                 height: 30px;
                 line-height: 30px;
             }
         }
+
         .message-item-id {
             font-size: 12px;
             color: #999;
         }
+
         .message-list-bottom {
             text-align: center;
             font-size: 12px;
@@ -131,12 +158,14 @@
             line-height: 30px;
             cursor: pointer;
         }
+
         .message-list-bottom:hover {
             color: var(--thoughtware-blue);
         }
-        
+
     }
 }
+
 .message-drawer-expend {
     left: 200px;
 }
