--- a/src/home/common/components/FirstMenu.scss
+++ b/src/home/common/components/FirstMenu.scss
@@ -2,6 +2,8 @@
     width: 75px;
     background-color: var(--thoughtware-gray-600);
     border-right: 1px solid #f0f0f0;
+    position: relative;
+    z-index: 1001;
     .licence_dropdown_menu {
         color: #2B2B2B;
     }
@@ -38,11 +40,7 @@
     }
 
     .first-menu-link {
-        &-active {
-            color: var(--thoughtware-blue);
-            background-color: var(--thoughtware-gray-400);
-            border-left: 3px solid var(--thoughtware-blue);
-        }
+       
 
         &-item {
             display: flex;
@@ -52,17 +50,25 @@
             margin-bottom: 5px;
             padding: 5px 0;
             width: 75px;
-            font-size: 12px;
+            font-size: 14px;
             cursor: pointer;
+        }
+
+        &-active {
+            color: var(--thoughtware-blue);
+            background-color: var(--thoughtware-gray-400);
+            border-left: 3px solid var(--thoughtware-blue);
+            width: 74px;
         }
 
         &-item:hover {
             background-color: var(--thoughtware-gray-400);
+            width: 74px;
         }
 
         .svg-icon {
-            width: 15px;
-            height: 15px;
+            width: 18px;
+            height: 18px;
         }
     }
 
@@ -82,20 +88,19 @@
     background-color: #2f5eb1;
     color: #fff;
     .first-menu-link-item:hover {
-        background-color: #7ec1ff;
+        background-color: #557AC0;
     }
     .first-menu-link-active {
         color: #fff;
-        background-color: #7ec1ff;
-        border-left: 0
-        // border-left: 3px solid var(--thoughtware-blue);
+        background-color: #557AC0;
+        border-left: 3px solid #ffffff !important;
     }
     .user-icon {
         background-color: #fff;
         color: #2B2B2B;
     }
     .first-menu-text-item:hover {
-        background-color: #7ec1ff;
+        background-color: #557AC0;
     }
 }
     
@@ -106,6 +111,7 @@
             color: var(--thoughtware-blue);
             background-color: var(--thoughtware-gray-400);
             border-left: 3px solid var(--thoughtware-blue);
+            width: calc(100% - 1px);
         }
 
         &-item:hover {
@@ -120,20 +126,20 @@
         color: #ffffff;
     }
 }
+
 .first-sider-black {
     background-color: #131d30;
     color: #fff;
     .first-menu-link-item:hover {
-        background-color: var(--thoughtware-blue);
+        background-color: #414A5A;
     }
     .first-menu-link-active {
         color: #fff;
-        background-color: var(--thoughtware-blue);
-        border-left: 0
-        // border-left: 3px solid var(--thoughtware-blue);
+        background-color: #414A5A;
+        border-left: 3px solid #fff;
     }
     .first-menu-text-item:hover {
-        background-color: var(--thoughtware-blue);
+        background-color: #414A5A;
     }
     .user-icon {
         background-color: #ffffff;
