--- a/src/home/search/components/Search.scss
+++ b/src/home/search/components/Search.scss
@@ -7,23 +7,41 @@
     padding-left: 20px;
     cursor: pointer;
     gap: 10px;
+
 }
 
+.search-modal {
+    padding: 0;
+
+    .ant-modal-body {
+        padding: 0 !important;
+    }
+}
 
 .show-box {
-    width: 375px;
-    max-height: 500px;
-    min-height: 100px;
-    transition: width 0.3s;
-    position: absolute;
+    transition: width .3s;
     background-color: #fff;
-    box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px, rgba(9, 30, 66, 0.31) 0px 0px 1px;
-    // margin-top: 5px;
     border-radius: 3px;
-    z-index: 1;
-    padding: 15px 0;
+    padding-bottom: 20px;
     color: #000;
     overflow: auto;
+    
+    .search-input-box {
+        display: flex;
+        align-items: center;
+        padding: 10px 20px;
+        border-bottom: 1px solid #f0f0f0;
+        margin-bottom: 15px;
+        .search-input {
+            outline: 0;
+            border: 0;
+            flex: 1;
+        }
+    }
+    .search-result-box {
+        max-height: calc(100% - 250px);
+        overflow: auto;
+    }
     .sort-box {
         .sort-title {
             color: #202d407a;
@@ -155,4 +173,3 @@
         }
     }
 }
-
