--- a/src/common/styles/_color.scss
+++ b/src/common/styles/_color.scss
@@ -30,13 +30,14 @@ $form-input-color: #e3e8f07d;
     --thoughtware-blue: #0D66E4;
     --thoughtware-gray-200: #ececec;
     --thoughtware-gray-300: #EDF0F5;
-    --thoughtware-gray-400: #e3e8f094;
+    --thoughtware-gray-400: #e3e8f0;
+    --thoughtware-gray-410: #F1F5FC;
     --thoughtware-gray-500: #999;
     --thoughtware-gray-600: #fafbfc;
     --thoughtware-gray-700: #f7f7f7;
     --thoughtware-gray-800: #fafbff;
     --thoughtware-gray: #efefef;
-    
+   
     --thoughtware-padding: 20px;
     --thoughtware-padding-resove: -20px;
     --thoughtware-padding-item: 20px;
