--- a/src/home/search/components/Search.scss
+++ b/src/home/search/components/Search.scss
@@ -36,6 +36,7 @@
             outline: 0;
             border: 0;
             flex: 1;
+            background-color: #fff;
         }
     }
     .search-result-box {
