--- a/src/projectSet/common/components/ProjectSetChangeModal.scss
+++ b/src/projectSet/common/components/ProjectSetChangeModal.scss
@@ -25,10 +25,14 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 15px;
+        padding: 15px 12px;
         font-weight: 600;
         cursor: pointer;
-        gap: 10px;
+        gap: 5px;
+        .projectSet-icon {
+            width: 24px;
+            height: 24px;
+        }
         .projectSet-text {
             flex: 1;
             .type {
