--- a/src/work/components/WorkListHead.scss
+++ b/src/work/components/WorkListHead.scss
@@ -21,8 +21,8 @@
             display: flex;
             justify-content: space-around;
             align-items: center;
-            gap: 10px;
-
+            gap: 5px;
+            padding-right: 10px;
             .worklist-button-icon {
                 cursor: pointer;
 
