--- a/src/project/stage/component/StagelineMap.scss
+++ b/src/project/stage/component/StagelineMap.scss
@@ -304,6 +304,12 @@
             .stage-key:hover {
                 color: var(--thoughtware-blue);
             }
+            .stage-icon {
+                width: 16px;
+                height: 16px;
+                border-radius: 3px;
+                font-size: 12px;
+            }
             .stage-text:hover {
                 color: var(--thoughtware-blue);
             }
