--- a/src/projectSet/common/components/ProjectSetChangeModal.scss
+++ b/src/projectSet/common/components/ProjectSetChangeModal.scss
@@ -102,15 +102,10 @@
             align-items: center;
             border-radius: 5px;
             margin-bottom: 5px;
+            gap: 5px;
             .projectSet-icon {
                 width: 32px;
                 height: 32px;
-                border-radius: 5px;
-                color: #fff;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                margin-right: 5px;
             }
             .projectSet-color-1 {
                 background-color: #cadbf3;
