--- a/src/sprint/overview/components/SprintSurvey.scss
+++ b/src/sprint/overview/components/SprintSurvey.scss
@@ -63,7 +63,7 @@
                 font-weight: var(--thoughtware-font-weight-bold);
                 height: 30px;
                 line-height: 30px;
-
+                gap: 5px;
                 &-icon {
                     width: 30px;
                     height: 30px;
