--- a/src/sprint/common/components/SprintChangeModal.scss
+++ b/src/sprint/common/components/SprintChangeModal.scss
@@ -79,6 +79,7 @@
         display: flex;
         align-items: center;
         cursor: pointer;
+        gap: 5px;
         .change-sprint-info {
             line-height: 30px;
             flex: 1;
