--- a/src/stage/plan/components/StagePlan.scss
+++ b/src/stage/plan/components/StagePlan.scss
@@ -118,6 +118,10 @@
                         overflow: hidden;
                         text-overflow: ellipsis;
                     }
+                    .work-item-title:hover {
+                        cursor: pointer;
+                        color: var(--thoughtware-blue);
+                    }
                 }
                 .work-item-master {
                     flex-shrink: 0;
