--- a/src/work/components/WorkTable.scss
+++ b/src/work/components/WorkTable.scss
@@ -13,13 +13,13 @@
             margin: 16px 0 0;
         }
         .work-first-col {
-            display: flex;
+            display: inline-flex;
             align-items: center;
-            height: 50px;
             width: 200px;
         }
         .ant-table-cell {
             white-space: nowrap;
+            height: 50px;
         }
         .ant-table-thead {
             .work-first-col {
@@ -95,7 +95,7 @@
         }
 
         .work-id {
-            display: flex;
+            display: inline-flex;
             align-items: center;
             margin-left: 5px;
             gap: 5px;
