修改图片地址

--- a/src/work/components/WorkTable.scss
+++ b/src/work/components/WorkTable.scss
@@ -9,6 +9,9 @@
     padding-bottom: var(--thoughtware-padding);
     .work-table-content {
         padding-top: var(--thoughtware-padding);
+        .ant-table-measure-row {
+            display: none;
+        }
         .ant-pagination {
             margin: 16px 0 0;
         }
