修改样式，路由

--- a/src/common/colorIcon/ColorIcon.scss
+++ b/src/common/colorIcon/ColorIcon.scss
@@ -6,6 +6,9 @@
     flex-shrink: 0;
     color: #2c2c2c;
 }
+.color-icon-0 {
+    background-color: #cadbf3;
+}
 .color-icon-1 {
     background-color: #cadbf3;
 }
