--- a/src/work/components/WorkTable.scss
+++ b/src/work/components/WorkTable.scss
@@ -20,6 +20,9 @@
             align-items: center;
             width: 200px;
         }
+        .ant-pagination-total-text {
+            color: #666;
+        }
         .ant-table-cell {
             white-space: nowrap;
             height: 50px;
