--- a/src/home/common/components/MessageList.scss
+++ b/src/home/common/components/MessageList.scss
@@ -52,6 +52,9 @@
 }
 
 .message-drawer {
+    .ant-drawer-mask {
+        background-color: transparent;
+    }
     .ant-drawer-header {
         padding: 9px 20px;
         border-bottom: 0
