--- a/src/work/components/WorkDetail.scss
+++ b/src/work/components/WorkDetail.scss
@@ -1,7 +1,14 @@
+// @media (max-width: 575px) { }
 @media screen and (max-width: 768px) and (min-width: 0px){
     /*媒体查询是用来设置样式的 当实际的屏幕大小满足条件时就执行样式 */
     .work-table-detail {
         width: calc(100% - 150px) !important;
+    }
+    .ant-form-item-label {
+        flex: 0 !important;
+    }
+    .ant-form-item-control {
+        max-width: 250px !important;
     }
 }
 
@@ -28,7 +35,7 @@
 /* 在分辨率大于 1024px 时应用的样式 */
 @media (min-width: 1600px) {
     .work-table-detail {
-        width: calc(100% - 460px) !important;
+        width: calc(100% - 760px) !important;
     }
 }
 
@@ -49,7 +56,7 @@
 
     .work-detail {
         height: 100%;
-        min-width: 1000px;
+        min-width: 685px;
         .ant-form-item-label {
             min-width: 100px;
         }
@@ -70,6 +77,7 @@
 
     .ant-form-item {
         margin-bottom: 10px;
+        flex-wrap: nowrap;
     }
 
     .work-detail-parent-title {
