--- a/src/work/components/WorkListFilter.scss
+++ b/src/work/components/WorkListFilter.scss
@@ -6,7 +6,7 @@
     gap: 6px;
     margin: 0 10px 10px 10px;
     padding-right: 10px;
-    background: #F1F5FC;
+    background: #ffffff;
     border-radius: 5px;
     .select-content {
         padding: 5px;
@@ -62,7 +62,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: #F1F5FC;
+        background-color: #ffffff;
         border: 0;
         height: 32px;
         line-height: 32px;
