--- a/src/work/components/WorkLog.scss
+++ b/src/work/components/WorkLog.scss
@@ -3,9 +3,9 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        margin-bottom: 10px;
         .worklog-top-title {
-            font-size: 16px;
-            font-weight: 600;
+            font-size: 14px;
         }
     }
 
@@ -101,6 +101,7 @@
         align-items: center;
         justify-content: space-between;
         gap: 20px;
+        margin-bottom: 10px;
         .log-static-item {
             flex: 1;
             .log-static-item-title {
