--- a/src/home/common/components/TodoPageList.scss
+++ b/src/home/common/components/TodoPageList.scss
@@ -43,6 +43,9 @@
         .todo-list-top {
             margin-top: 20px;
         }
+        .todo-list {
+            min-height: 100px;
+        }
     }
 }
 .sprint-detail-content {
