--- a/src/home/search/components/Search.scss
+++ b/src/home/search/components/Search.scss
@@ -45,7 +45,7 @@
     }
     .sort-box {
         .search-spin {
-            min-height: 100px;
+            height: fit-content;
         }
         .sort-title {
             color: #202d407a;
