--- a/src/common/styles/_color.scss
+++ b/src/common/styles/_color.scss
@@ -120,6 +120,14 @@ $form-input-color: #e3e8f07d;
     width: 12px;
     height: 12px;
 }
+.icon-15 {
+    width: 15px;
+    height: 15px;
+}
+.icon-16 {
+    width: 16px;
+    height: 16px;
+}
 .icon-18 {
     width: 18px;
     height: 18px;
