--- a/src/setting/common/components/Orga.scss
+++ b/src/setting/common/components/Orga.scss
@@ -37,6 +37,7 @@
             border-bottom: 1px solid #d7d7d7;
             gap: 5px;
             cursor: pointer;
+            border-left: 3px solid transparent;
         }
         
 
@@ -63,16 +64,19 @@
             line-height: 40px;
             padding: 0 20px;
             cursor: pointer;
-
+            border-left: 3px solid transparent;
+            gap: 5px;
         }
 
         .orga-aside-item-left {
             display: inline-flex;
             align-items: center;
+            gap: 5px;
         }
 
         .orga-aside-li {
             line-height: 40px;
+            gap: 5px;
         }
 
         .orga-aside-ul {
@@ -85,7 +89,7 @@
 
         .orga-aside-select {
             background-color: var(--thoughtware-gray-400);
-            border-left: 3px solid var(--thoughtware-gray-400);
+            border-left: 3px solid var(--thoughtware-gray-400) !important;
         }
     }
 
